2007-05-28  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 1.1.5.

	* NEWS: Bump version to 1.1.5.

	* configure.ac: Bump version to 1.1.5.  Update AC_COPYRIGHT.

	* THANKS: Add Lucas Nussbaum.

2007-05-28  Roger Leigh  <rleigh@debian.org>

	* Version 1.1.4.

	* NEWS: Document process killing.

	* debian/changelog: Close #426416.  Finalise for 1.1.4.

2007-05-28  Roger Leigh  <rleigh@debian.org>

	* HACKING: Document tests for process termination.

2007-05-28  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/setup/15killprocs: Only run readlink on
	/proc/pid/exe if doing verbose logging.  Thanks to Kees Cook.

2007-05-28  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-run-parts.cc (check_filename): Remove debugging
	messages added to find a problem with regex match failure.

2007-05-28  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/setup/*: Add a copyright notice and GPL boilerplate
	to all shell scripts.

2007-05-28  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #391319.

	* AUTHORS: Add Kees Cook.

	* bin/schroot/setup/15killprocs: New file.  Kill processes in the
	chroot before unmounting any filesystems.  Many thanks to Kees
	Cook for implementing this.

	* bin/schroot/setup/Makefile.am
	(setup_SCRIPTS): Add 15killprocs

2007-05-22  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/setup/10mount
	(do_umount_all): Cope with the case schroot-listmounts returns
	nothing, so that "" is not unmounted.

2007-05-20  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 1.1.4.  Merge changelog
	entries from schroot-1.0 branch.

	* NEWS: Bump version to 1.1.4.  Merge NEWS entries from
	schroot-1.0 branch.

	* configure.ac: Bump version to 1.1.4.

2007-05-20  Roger Leigh  <rleigh@debian.org>

	* Version 1.1.3.

	* debian/changelog: Finalise for 1.1.3.

2007-05-19  Roger Leigh  <rleigh@debian.org>

	* bin/schroot-base/schroot-base-run.h
	(run): Catch a runtime_error thrown while setting the locale, and