@@ -2,18 +2,19 @@ schroot was originally written by Roger Leigh <rleigh@debian.org>.
 It would not be what it is today without the invaluable help of these
 people:
 
-Andreas Bombe <aeb@debian.org>
-Steve Langasek <vorlon@debian.org>
-Martin Michlmayr <tbm@debian.org>
-Lucas Nussbaum <lucas@debian.org>
-Adeodato Simó <adeodato@debian.org>
+Andreas Bombe		<aeb@debian.org>
+Raphaël Hertzog		<hertzog@debian.org>
+Steve Langasek		<vorlon@debian.org>
+Martin Michlmayr	<tbm@debian.org>
+Lucas Nussbaum		<lucas@debian.org>
+Adeodato Simó		<adeodato@debian.org>
 	For many suggestions, feature requests and bug reports.
 	Without their destruction testing and help, schroot would not
 	have been pushed as far as it has.
 
-Ben Hutchings <benh@debian.org>
+Ben Hutchings		<benh@debian.org>
 	Help with many C++ problems, especially the intricacies of
 	templates and other obscure and annoying language features.
 
-Simon Richter <sjr@debian.org>
+Simon Richter		<sjr@debian.org>
 	Help with PAM session handling.
