@@ -62,12 +62,14 @@ fi
 
 if [ "$CHROOT_TYPE" = "plain" ] || [ "$CHROOT_TYPE" = "directory" ] || [ "$CHROOT_TYPE" = "file" ] || [ "$CHROOT_TYPE" = "block-device" ] || [ "$CHROOT_TYPE" = "lvm-snapshot" ]; then
 
-    if [ "$CHROOT_TYPE" = "plain" ] || [ "$CHROOT_TYPE" = "directory" ]; then
+    if [ "$CHROOT_TYPE" = "plain" ]; then
 	CHROOT_MOUNT_OPTIONS="--rbind"
 	CHROOT_MOUNT_DEVICE="$CHROOT_LOCATION"
-    fi
-
-    if [ "$CHROOT_TYPE" = "lvm-snapshot" ]; then
+    elif [ "$CHROOT_TYPE" = "directory" ]; then
+	CHROOT_MOUNT_OPTIONS="--bind"
+	CHROOT_MOUNT_DEVICE="$CHROOT_LOCATION"
+    elif [ "$CHROOT_TYPE" = "lvm-snapshot" ]; then
+	CHROOT_MOUNT_OPTIONS=""
 	CHROOT_MOUNT_DEVICE="$CHROOT_LVM_SNAPSHOT_DEVICE"
     fi
 
